# slang-old

./: Cargo.toml  Jenkinsfile  README.md  language.md
docs/: grammar.txt  language.md
docs/sid/: README.md  sid-1.md
src/: interpreter.rs  lib.rs  main.rs  parser.rs  token.rs  tokenizer.rs
tests/: test_expr.slang  test_print.slang  test_var.slang
