[package]
name = "slang"
version = "0.1.0"
authors = ["Agoston Szepessy <agszepp@gmail.com>"]

[lib]
name = "slang"
path = "src/lib.rs"

[profile.release]
opt-level = 3
debug = true
rpath = false
lto = true
debug-assertions = false
panic = 'unwind'
incremental = false
overflow-checks = false

[dependencies]
failure = "0.1.1"
either = "1.4.0"
prev-iter = "0.1.2"
